--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,8 @@
-<div *ngIf = "messageService.messages.length">
+<div *ngIf="messageService.messages.length">
+
   <h2>Messages</h2>
-  <button type = "button" class="clear"
+  <button type="button" class="clear"
           (click)="messageService.clear()">Clear messages</button>
-  <idv *ngFor="let message of messageService.messages"> {{ message}}</idv>
+  <div *ngFor='let message of messageService.messages'> {{message}} </div>
+
 </div>
